--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@supabase/supabase-js": "^2.50.3",
     "chart.js": "^4.5.0",
+    "idb": "^8.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
